...
        android:layout_marginLeft="135dp"
        android:layout_marginTop="425dp"
        android:text="Who is this?"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/submitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="480dp"
        android:hint="Enter name"
        android:ems="10"
...
